[package]
name = "movable"
version = "0.0.0"
authors = ["LEAFERx <leaferx@outlook.com>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
language-e2e-tests = { path = "../libra/language/e2e-tests" }
vm = { path = "../libra/language/vm" }
vm-runtime = { path = "../libra/language/vm/vm-runtime" }
vm-runtime-types = { path = "../libra/language/vm/vm-runtime/vm-runtime-types" }
vm-cache-map = { path = "../libra/language/vm/vm-runtime/vm-cache-map" }
bytecode-verifier = { path = "../libra/language/bytecode-verifier" }
libra-types = { path = "../libra/types" }
libra-logger = { path = "../libra/common/logger" }
libra-state-view = { path = "../libra/storage/state-view" }

anyhow = "1.0.26"
log = "0.4"
env_logger = "0.7"
structopt = "0.3"
serde = "1.0"
serde_json = "1.0"
z3 = "0.4"
nix = "0.15.0"
rental = "0.5.4"
