[package]
name = "movable-engine"
version = "0.0.0"
authors = ["LEAFERx <leaferx@outlook.com>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
move-core-types = { path = "../../libra/language/move-core/types" }
move-vm-state = { path = "../../libra/language/move-vm/state" }
move-vm-types = { path = "../../libra/language/move-vm/types" }
language-e2e-tests = { path = "../../libra/language/e2e-tests" }
vm = { path = "../../libra/language/vm" }
libra-types = { path = "../../libra/types" }

z3 = "0.5.1"
serde = "1.0"

symbolic_vm = { path = "../symbolic_vm", package = "movable-symbolic-vm" }
symbolic_chain_state = { path = "../symbolic_chain_state", package = "movable-symbolic-chain-state" }
