[package]
name = "movable-symbolic-vm"
version = "0.1.0"
authors = ["LEAFERx <leaferx@outlook.com>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
move-core-types = { path = "../../diem/language/move-core/types" }
move-vm-types = { path = "../../diem/language/move-vm/types" }
move-vm-runtime = { path = "../../diem/language/move-vm/runtime" }
diem-vm = { path = "../../diem/language/diem-vm" }
move-vm-natives = { path = "../../diem/language/move-vm/natives" }
language-e2e-tests = { path = "../../diem/language/testing-infra/e2e-tests" }
vm = { path = "../../diem/language/vm" }
bytecode-verifier = { path = "../../diem/language/bytecode-verifier" }
diem-crypto = { path = "../../diem/crypto/crypto"}
diem-types = { path = "../../diem/types" }
diem-logger = { path = "../../diem/common/logger" }
diem-state-view = { path = "../../diem/storage/state-view" }
diem-infallible = { path = "../../diem/common/infallible" }

anyhow = "1.0.26"
mirai-annotations = "1.10.1"
log = "0.4"
env_logger = "0.7"
structopt = "0.3"
serde = { version = "1.0.110", default-features = false }
serde_json = "1.0.53"
z3 = "0.10.0"
z3-sys = "0.6.3"
# z3 = { path = "/root/z3.rs/z3" }
nix = "0.15.0"
